syntax = "proto3";

package tour;

option go_package = "module_tour/proto/tour";

import "google/protobuf/timestamp.proto";

service TourProgressService{
    rpc CreateTourProgress(TourProgress) returns (EmptyResponse){}
    rpc GetAllTourProgress(Empty) returns (MultiTourProgressResponse){}
    rpc GetTourProgressById(Id) returns (TourProgressResponse){}
    rpc UpdateTourProgress(TourProgress) returns (EmptyResponse){}
    rpc DeleteTourProgress(Id) returns (EmptyResponse){}
}

service TouristPositionService{
    rpc CreateTouristPosition(TouristPosition) returns(EmptyResponse){}
    rpc GetTouristPositionById(Id) returns(TouristPositionResponse){}
    rpc GetTouristPositionByUser(Id) returns(TouristPositionResponse){}
    rpc UpdateTouristPosition(TouristPosition) returns(EmptyResponse){}
}

service KeypointService{
    rpc CreateKeypoint(Keypoint) returns (EmptyResponse){}
    rpc GetKeypointsByTourId(Id) returns (MultiKeypointResponse){}
    rpc UpdateKeypoint(Keypoint) returns (EmptyResponse){}
    rpc DeleteKeypoint(Id) returns (EmptyResponse){}
}

service TourService {
    rpc CreateTour(Tour) returns (EmptyResponse){}
    rpc GetTourById(Id) returns (EmptyResponse){}
    rpc GetTourByStatus(Status) returns(MultiTourResponse){}
    rpc GetTourByAuthor(Id) returns(MultiTourResponse){}
    rpc UpdateTour(Tour) returns(EmptyResponse){}
    rpc GetAllTours(EmptyResponse) returns(MultiTourResponse){}
}

message Empty{}

message Id{
    int64 id = 1;
}

message TourProgress{
    int64 id = 1;
    int64 touristPositionId = 2;
    int64 tourId = 3;
    int64 status = 4;
    google.protobuf.Timestamp startTime = 5;
    google.protobuf.Timestamp lastActivity = 6;
    int64 currentKeypoint = 7;
    bool isInProgress = 8;
}

message EmptyResponse{}

message TourProgressResponse{
    TourProgress tourProgress = 1;
}

message MultiTourProgressResponse{
    repeated TourProgress tourProgress = 1;
}

message TouristPosition{
    int64 id = 1;
    TourProgress tourProgress = 2;
    int64 userId = 3;
    float latitude = 4;
    float longitude = 5;
    google.protobuf.Timestamp updatedAt = 6;
}

message TouristPositionResponse{
    TouristPosition position = 1;
}

message Keypoint{
    int64 id = 1;
    int64 tourId = 2;
    string name = 3;
    float latitude = 4;
    float longitude = 5;
    string description = 6;
    uint64 position = 7;
    string image = 8;
    string secret = 9;
}

message MultiKeypointResponse{
    repeated Keypoint keypoint = 1;
}

message TourTag {
    int64 id = 1;
    int64 tourid = 2;
    string tag = 3;
}

message Tour {
    int64 id = 1;
    int64 userid = 2;
    string name = 3;
    string description = 4;
    float price = 5;
    int64 difficulty = 6;
    int64 transporttype = 7;
    int64 status = 8;
    repeated TourTag tags = 9;
    repeated Keypoint keypoints = 10;
    int64 duration = 11;
    float distance = 12;
    google.protobuf.Timestamp statusupdatetime = 13;
    repeated TourProgress tourprogress = 14;
}

message TourResponse {
    Tour tour = 1;
}

message Status {
    int64 status = 1;
}

message MultiTourResponse {
    repeated Tour tours = 1;
}